# dropfix

./: .clinerules  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  db-ignore.md  dropbox-ignore.md  dropfix-check.py  dropfix-win.ps1  dropfix.py  ignore-dropbox-dirs.sh  mkdocs.yml  pyproject.toml  refactor-brief.md
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  on-release-main.yml
docs/: db-ignore.md  index.md  modules.md
dropfix/: dropfix-check.py  dropfix.py
scripts/: dropfix-cleanup.sh  dropfix-mac.sh
src/dropfix/: __init__.py  _checker.py  _formatter.py  _logger.py  dropfix.py
src/tests/: __init__.py  test_dropfix.py
tests/: __init__.py  test_checker.py  test_dropfix.py  test_foo.py
